# BooleanEngine

./: .gitignore  CMakeLists.txt  LICENSE  PLAN.md
include/Core/: Constants.hpp  Exceptions.hpp  Types.hpp
include/Evaluation/: BooleanEvaluator.hpp  TruthTableGenerator.hpp
include/Expression/: AST.hpp  Expression.hpp  ExpressionUtilities.hpp
include/Graph/: Edge.hpp  Graph.hpp  Vertex.hpp
include/GrayCode/: GrayCode.hpp
include/Hypercube/: Hypercube.hpp  HypercubeGenerator.hpp
include/KarnaughMap/: KarnaughMap.hpp  KarnaughMapGenerator.hpp
include/Parser/: BooleanExpressionParser.hpp  MintermParser.hpp  Parser.hpp  ParserUtilities.hpp  Token.hpp  Tokenizer.hpp  TruthTableParser.hpp
include/Utilities/: BinaryUtils.hpp  BitUtils.hpp  MathUtils.hpp
src/: main.cpp
src/Evaluation/: BooleanEvaluator.cpp  TruthTableGenerator.cpp
src/Expression/: AST.cpp  Expression.cpp  ExpressionUtilities.cpp
src/Graph/: Edge.cpp  Graph.cpp  Vertex.cpp
src/GrayCode/: GrayCode.cpp
src/Hypercube/: Hypercube.cpp  HypercubeGenerator.cpp
src/KarnaughMap/: KarnaughMap.cpp  KarnaughMapGenerator.cpp
src/Parser/: BooleanExpressionParser.cpp  MintermParser.cpp  ParserUtilities.cpp  Tokenizer.cpp  TruthTableParser.cpp
src/Utilities/: BinaryUtils.cpp  BitUtils.cpp  MathUtils.cpp
tests/: test_boolean_evaluator.cpp  test_boolean_expression_parser.cpp  test_expression_utilities.cpp  test_graph.cpp  test_graycode.cpp  test_hypercube.cpp  test_kmap.cpp  test_minterm_parser.cpp  test_parser.cpp  test_truth_table_generator.cpp  test_truth_table_parser.cpp  test_utilities.cpp
